# regex

./: .coveralls.yml  .travis.yml  README.md  setup.cfg
bourbaki/regex/: __init__.py  base.py  utils.py
tests/: test_imports.py  test_regex.py  test_regex_local_flags.py  test_regex_rename.py
