[bumpversion]
current_version = 0.1.0
tag = True
commit = True

[bumpversion:file:version.txt]

[bumpversion:file:bourbaki/nametamer/__init__.py]

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x
python_files = tests/test*.py

[metadata]
name = bourbaki.nametamer
version = file: version.txt
namespace_packages = bourbaki
author = Matthew Hawthorn
author_email = hawthorn.matthew@gmail.com
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing
    Topic :: Utilities
    Typing :: Typed
license = Apache License 2.0
long_description = file: README.md
url = http://marketintelligence.spglobal.com

[options]
packages = find:
setup_requires =
	pytest-runner
	setuptools>=39.0
tests_require = 
	pytest
zip_safe = True
